# Spacecrash

./: .gitignore  README.md
source/: CMakeLists.txt
source/src/: CMakeLists.txt  Spacecrash.cc  base.h  core.cc  core.h  game0.cc  stdafx.cc  stdafx.h  sys.h  sys_osx.cc  sys_win.cc
source/tst/: CMakeLists.txt
